# GaussianLibCpp

./: .gitignore  CMakeLists.txt  Makefile.old  README.md  kmeans.cpp  kmeans.h  main.cpp
include/: blur.h  kmeans.h  utils.h
src/: blur.cpp  kmeans.cpp  main.cpp  utils.cpp
